<resources>
    <string name="app_name">Agenda</string>
    <string name="btLoad">Load Photo</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="category">Category</string>
    <string name="birthday">Birthday</string>
    <string name="save">Save</string>

    <string name="homepage">Homepage</string>
    <string name="add_profile">Add Profile</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="popescu_ion">Popescu Ion</string>

    <string name="popescuion98_gmail_com">popescuion98@gmail.com</string>
    <string name="popa_andrei">Popa Andrei</string>
    <string name="work">Work</string>

    <string-array name="add_category">
        <item>Family</item>
        <item>Close friends</item>
        <item>Work</item>
        <item>School</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint">Type name</string>
    <string name="select_a_date">Select a date</string>
    <string name="type_your_message">Type your message</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="conversation">Conversation</string>
    <string name="delete">Delete</string>
    <string name="title_activity_maps">Map</string>
    <string name="ideas">Ideas</string>
</resources>