<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/background"
    tools:context=".AddProfile">

    <Button
        android:id="@+id/btnLoad"
        android:layout_width="400px"
        android:layout_height="wrap_content"
        android:text="@string/btLoad"
        style="@style/Buttons"
       />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="800px"
        android:layout_height="100px"
        android:inputType="text"
        style="@style/FormElement"
        android:hint="@string/first_name"/>
    <EditText
        android:id="@+id/etLastName"
        android:layout_width="800px"
        android:layout_height="100px"
        android:inputType="text"
        style="@style/FormElement"
        android:hint="@string/last_name"/>
    <EditText
        android:id="@+id/etPhone"
        android:layout_width="800px"
        android:layout_height="100px"
        android:inputType="phone"
        style="@style/FormElement"
        android:hint="@string/phone_number"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="800px"
        android:layout_height="100px"
        android:inputType="text"
        style="@style/FormElement"
        android:hint="@string/email"/>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="800px"
        android:layout_height="wrap_content"
        style="@style/FormElement"
        android:text="@string/category" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="800px"
        style="@style/FormElement"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvBirthDate"
        android:layout_width="800px"
        android:layout_height="wrap_content"
        style="@style/FormElement"
        android:text="@string/birthday" />

    <TextView
        android:id="@+id/etBirthday"
        android:layout_width="800px"
        android:layout_height="wrap_content"
        style="@style/FormElement"
        android:hint="@string/select_a_date"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            style="@style/Buttons"/>
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="@style/Buttons"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/container" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottomNav"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryDark"
            app:menu="@menu/bottom_navigation"

            />


    </RelativeLayout>
</LinearLayout>