<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Popup">

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:inputType="text"
        android:hint="@string/first_name"></EditText>
    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:inputType="text"
        android:hint="@string/last_name"></EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Buttons"
            android:text="@string/cancel"></Button>
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Buttons"
            android:text="@string/send"></Button>

    </LinearLayout>

</LinearLayout>